--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@mipmap/ic_launcher" />
 
+        <meta-data
+            android:name="firebase_messaging_auto_notification"
+            android:value="false" />
+
 
         <activity
             android:name=".MainActivity"
